Implementacion de modules
Bootsrap, poperjs y jquery. Se agregó el main html y el index de js.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Ejercicio Practico",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "electron ."
   },
   "repository": {
     "type": "git",
@@ -19,5 +20,10 @@
   "homepage": "https://github.com/Zonche/ejercicioConduent#readme",
   "devDependencies": {
     "electron": "^5.0.0"
+  },
+  "dependencies": {
+    "bootstrap": "^4.3.1",
+    "jquery": "^3.4.0",
+    "popper.js": "^1.15.0"
   }
 }
