--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
   },
   "dependencies": {
     "bootstrap": "^4.3.1",
+    "chart.js": "^2.8.0",
     "jquery": "^3.4.0",
-    "popper.js": "^1.15.0"
+    "popper.js": "^1.15.0",
+    "xlsx": "^0.14.2"
   }
 }
